# enaswan

./: LICENSE  README.md  meta.yaml  pyproject.toml
src/enaswan/: checker.py  cli.py  downloader.py  metadata.py
src/enaswan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
