[build-system]
requires      = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "enaswan"
version         = "0.1.1"
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "pandas>=1.5.0",
    "urllib3>=1.26.0",
]
requires-python = ">=3.8"
authors         = [
    {name = "Bandari Bharathwaj", email = "bharathwajnbw@gmail.com"}
]
description     = "ENA Smart Workflow and Acquisition Network — fast parallel FASTQ downloader for the European Nucleotide Archive"
readme          = "README.md"
license         = "MIT"
keywords = ["bioinformatics", "ENA", "FASTQ", "genomics", "sequencing", "download", "parallel", "NGS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"

]

[project.scripts]
enaswan = "enaswan.cli:main"

[project.urls]
Homepage   = "https://github.com/Bharathwaj8920/enaswan"
Repository = "https://github.com/Bharathwaj8920/enaswan"
Issues     = "https://github.com/Bharathwaj8920/enaswan/issues"

[tool.setuptools.packages.find]
where = ["src"]